hphp/hack/test/typecheck/abstract_trait.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

abstract trait Foo {}
